--- a/TnbBase/TnbBase.vcxproj
+++ b/TnbBase/TnbBase.vcxproj
@@ -545,6 +545,53 @@
     <ClInclude Include="TnbLib\Base\matrices\LduMatrix\LduMatrix\LduMatrixTemplateI.hxx" />
     <ClInclude Include="TnbLib\Base\matrices\LduMatrix\LduMatrix\solverPerformance.hxx" />
     <ClInclude Include="TnbLib\Base\matrices\LduMatrix\LduMatrix\SolverPerformanceTemplate.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\DiagonalPreconditioner\diagonalPreconditioner.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\DiagonalPreconditioner\DiagonalPreconditionerTemplate.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\DICPreconditioner\DICPreconditioner.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\DILUPreconditioner\DILUPreconditioner.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\DILUPreconditioner\TDILUPreconditioner.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\FDICPreconditioner\FDICPreconditioner.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\GAMGPreconditioner\GAMGPreconditioner.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\NoPreconditioner\noPreconditioner.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\NoPreconditioner\NoPreconditionerTemplate.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Smoothers\DICGaussSeidel\DICGaussSeidelSmoother.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Smoothers\DIC\DICSmoother.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Smoothers\DILUGaussSeidel\DILUGaussSeidelSmoother.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Smoothers\DILU\DILUSmoother.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Smoothers\FDIC\FDICSmoother.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Smoothers\GaussSeidel\GaussSeidelSmoother.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Smoothers\GaussSeidel\TGaussSeidelSmoother.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Smoothers\nonBlockingGaussSeidel\nonBlockingGaussSeidelSmoother.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Smoothers\symGaussSeidel\symGaussSeidelSmoother.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\DiagonalSolver\diagonalSolver.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\DiagonalSolver\DiagonalSolverTemplate.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGAgglomerations\algebraicPairGAMGAgglomeration\algebraicPairGAMGAgglomeration.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGAgglomerations\dummyAgglomeration\dummyAgglomeration.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGAgglomerations\GAMGAgglomeration\GAMGAgglomeration.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGAgglomerations\pairGAMGAgglomeration\pairGAMGAgglomeration.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\eagerGAMGProcAgglomeration\eagerGAMGProcAgglomeration.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\GAMGProcAgglomeration\GAMGProcAgglomeration.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\manualGAMGProcAgglomeration\manualGAMGProcAgglomeration.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\masterCoarsestGAMGProcAgglomeration\masterCoarsestGAMGProcAgglomeration.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\noneGAMGProcAgglomeration\noneGAMGProcAgglomeration.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\procFacesGAMGProcAgglomeration\procFacesGAMGProcAgglomeration.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGSolver.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaceFields\cyclicGAMGInterfaceField\cyclicGAMGInterfaceField.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaceFields\GAMGInterfaceField\GAMGInterfaceField.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaceFields\processorCyclicGAMGInterfaceField\processorCyclicGAMGInterfaceField.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaceFields\processorGAMGInterfaceField\processorGAMGInterfaceField.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaces\cyclicGAMGInterface\cyclicGAMGInterface.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaces\GAMGInterface\GAMGInterface.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaces\processorCyclicGAMGInterface\processorCyclicGAMGInterface.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaces\processorGAMGInterface\processorGAMGInterface.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\PBiCCCG\PBiCCCG.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\PBiCGStab\PBiCGStab.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\PBiCG\PBiCG.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\PBiCICG\PBiCICG.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\PCG\PCG.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\PCICG\PCICG.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\SmoothSolver\smoothSolver.hxx" />
+    <ClInclude Include="TnbLib\Base\matrices\LduMatrix\Solvers\SmoothSolver\SmoothSolverTemplate.hxx" />
     <ClInclude Include="TnbLib\Base\matrices\LLTMatrix\LLTMatrix.hxx" />
     <ClInclude Include="TnbLib\Base\matrices\LUscalarMatrix\LUscalarMatrix.hxx" />
     <ClInclude Include="TnbLib\Base\matrices\LUscalarMatrix\procLduInterface.hxx" />
@@ -893,7 +940,6 @@
     <ClInclude Include="TnbLib\Base\primitives\Scalar\lists\scalarList.hxx" />
     <ClInclude Include="TnbLib\Base\primitives\Scalar\lists\scalarListIOList.hxx" />
     <ClInclude Include="TnbLib\Base\primitives\Scalar\longDoubleScalar\longDoubleScalar.hxx" />
-    <ClInclude Include="TnbLib\Base\primitives\Scalar\Scalar.hxx" />
     <ClInclude Include="TnbLib\Base\primitives\Scalar\scalar\scalar.hxx" />
     <ClInclude Include="TnbLib\Base\primitives\septernion\septernion.hxx" />
     <ClInclude Include="TnbLib\Base\primitives\septernion\septernionI.hxx" />
@@ -1369,6 +1415,66 @@
     <ClCompile Include="TnbLib\Base\matrices\LduMatrix\LduMatrix\LduMatrixUpdateMatrixInterfacesTemplate.cxx" />
     <ClCompile Include="TnbLib\Base\matrices\LduMatrix\LduMatrix\solverPerformance.cxx" />
     <ClCompile Include="TnbLib\Base\matrices\LduMatrix\LduMatrix\SolverPerformanceTemplate.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\DiagonalPreconditioner\diagonalPreconditioner.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\DiagonalPreconditioner\DiagonalPreconditionerTemplate.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\DICPreconditioner\DICPreconditioner.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\DILUPreconditioner\DILUPreconditioner.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\DILUPreconditioner\TDILUPreconditioner.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\FDICPreconditioner\FDICPreconditioner.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\GAMGPreconditioner\GAMGPreconditioner.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\lduPreconditioners.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\NoPreconditioner\noPreconditioner.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Preconditioners\NoPreconditioner\NoPreconditionerTemplate.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Smoothers\DICGaussSeidel\DICGaussSeidelSmoother.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Smoothers\DIC\DICSmoother.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Smoothers\DILUGaussSeidel\DILUGaussSeidelSmoother.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Smoothers\DILU\DILUSmoother.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Smoothers\FDIC\FDICSmoother.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Smoothers\GaussSeidel\GaussSeidelSmoother.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Smoothers\GaussSeidel\TGaussSeidelSmoother.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Smoothers\lduSmoothers.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Smoothers\nonBlockingGaussSeidel\nonBlockingGaussSeidelSmoother.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Smoothers\symGaussSeidel\symGaussSeidelSmoother.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\DiagonalSolver\diagonalSolver.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\DiagonalSolver\DiagonalSolverTemplate.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGAgglomerations\algebraicPairGAMGAgglomeration\algebraicPairGAMGAgglomeration.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGAgglomerations\dummyAgglomeration\dummyAgglomeration.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGAgglomerations\GAMGAgglomeration\GAMGAgglomerateLduAddressing.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGAgglomerations\GAMGAgglomeration\GAMGAgglomeration.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGAgglomerations\GAMGAgglomeration\GAMGAgglomerationTemplates.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGAgglomerations\pairGAMGAgglomeration\pairGAMGAgglomerate.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGAgglomerations\pairGAMGAgglomeration\pairGAMGAgglomeration.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\eagerGAMGProcAgglomeration\eagerGAMGProcAgglomeration.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\GAMGProcAgglomeration\GAMGProcAgglomeration.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\manualGAMGProcAgglomeration\manualGAMGProcAgglomeration.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\masterCoarsestGAMGProcAgglomeration\masterCoarsestGAMGProcAgglomeration.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\noneGAMGProcAgglomeration\noneGAMGProcAgglomeration.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGProcAgglomerations\procFacesGAMGProcAgglomeration\procFacesGAMGProcAgglomeration.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGSolver.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGSolverAgglomerateMatrix.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGSolverInterpolate.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGSolverScale.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\GAMGSolverSolve.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaceFields\cyclicGAMGInterfaceField\cyclicGAMGInterfaceField.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaceFields\GAMGInterfaceField\GAMGInterfaceField.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaceFields\GAMGInterfaceField\GAMGInterfaceFieldNew.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaceFields\processorCyclicGAMGInterfaceField\processorCyclicGAMGInterfaceField.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaceFields\processorGAMGInterfaceField\processorGAMGInterfaceField.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaces\cyclicGAMGInterface\cyclicGAMGInterface.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaces\GAMGInterface\GAMGInterface.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaces\GAMGInterface\GAMGInterfaceNew.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaces\GAMGInterface\GAMGInterfaceTemplates.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaces\processorCyclicGAMGInterface\processorCyclicGAMGInterface.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\GAMG\interfaces\processorGAMGInterface\processorGAMGInterface.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\lduSolvers.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\PBiCCCG\PBiCCCG.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\PBiCGStab\PBiCGStab.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\PBiCG\PBiCG.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\PBiCICG\PBiCICG.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\PCG\PCG.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\PCICG\PCICG.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\SmoothSolver\smoothSolver.cxx" />
+    <ClCompile Include="TnbLib\Base\matrices\LduMatrix\Solvers\SmoothSolver\SmoothSolverTemplate.cxx" />
     <ClCompile Include="TnbLib\Base\matrices\LLTMatrix\LLTMatrix.cxx" />
     <ClCompile Include="TnbLib\Base\matrices\LUscalarMatrix\LUscalarMatrix.cxx" />
     <ClCompile Include="TnbLib\Base\matrices\LUscalarMatrix\LUscalarMatrixTemplates.cxx" />
@@ -1651,7 +1757,6 @@
     <ClCompile Include="TnbLib\Base\primitives\Scalar\lists\scalarList.cxx" />
     <ClCompile Include="TnbLib\Base\primitives\Scalar\lists\scalarListIOList.cxx" />
     <ClCompile Include="TnbLib\Base\primitives\Scalar\longDoubleScalar\longDoubleScalar.cxx" />
-    <ClCompile Include="TnbLib\Base\primitives\Scalar\Scalar.cxx" />
     <ClCompile Include="TnbLib\Base\primitives\Scalar\scalar\incGamma.cxx" />
     <ClCompile Include="TnbLib\Base\primitives\Scalar\scalar\invIncGamma.cxx" />
     <ClCompile Include="TnbLib\Base\primitives\Scalar\scalar\scalar.cxx" />
