--- a/TnbConversion/TnbConversion.vcxproj.filters
+++ b/TnbConversion/TnbConversion.vcxproj.filters
@@ -57,12 +57,6 @@
     <ClCompile Include="TnbLib\conversion\ensight\part\ensightParts.cxx">
       <Filter>TnbLib\conversion\ensight\part</Filter>
     </ClCompile>
-    <ClCompile Include="TnbLib\conversion\ensight\part\ensightPartsTemplates.cxx">
-      <Filter>TnbLib\conversion\ensight\part</Filter>
-    </ClCompile>
-    <ClCompile Include="TnbLib\conversion\ensight\part\ensightPartTemplates.cxx">
-      <Filter>TnbLib\conversion\ensight\part</Filter>
-    </ClCompile>
     <ClCompile Include="TnbLib\conversion\meshReader\starcd\STARCDMeshReader.cxx">
       <Filter>TnbLib\conversion\meshReader\starcd</Filter>
     </ClCompile>
@@ -136,6 +130,12 @@
     </ClInclude>
     <ClInclude Include="TnbLib\conversion\polyDualMesh\polyDualMesh.hxx">
       <Filter>TnbLib\conversion\polyDualMesh</Filter>
+    </ClInclude>
+    <ClInclude Include="TnbLib\conversion\ensight\part\ensightPartI.hxx">
+      <Filter>TnbLib\conversion\ensight\part</Filter>
+    </ClInclude>
+    <ClInclude Include="TnbLib\conversion\ensight\part\ensightPartsI.hxx">
+      <Filter>TnbLib\conversion\ensight\part</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
